policy/gatekeeper/k8s/required-labels-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: ns-must-have-labels
spec:
  match:
    kinds: [{ apiGroups: [""], kinds: ["Namespace"] }]
